tests/fixtures/valid/operator_comparison.torel
unit fixtures.operator_comparison;

export proc main() -> Bool {
    40 + 2 == 42
}
