tests/fixtures/invalid/unreachable_after_diverging_loop.torel
unit fixtures.unreachable_after_diverging_loop;

export proc main() -> Int32 {
    loop {
        continue;
    }

    42
}
